[gd_scene load_steps=12 format=3 uid="uid://dyenx4sgxixe6"]

[ext_resource type="Script" path="res://games/skull_blue.gd" id="1_rvtr0"]
[ext_resource type="Texture2D" uid="uid://4262pcqsusf1" path="res://assets/character/imps.png" id="2_ip5pn"]
[ext_resource type="AudioStream" uid="uid://m7tnney8dr5h" path="res://assets/sfx/DyingSounds.wav" id="3_18t7y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xevcp"]
atlas = ExtResource("2_ip5pn")
region = Rect2(0, 0, 45, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wv1l"]
atlas = ExtResource("2_ip5pn")
region = Rect2(45, 0, 45, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1wjc"]
atlas = ExtResource("2_ip5pn")
region = Rect2(90, 0, 45, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpxqc"]
atlas = ExtResource("2_ip5pn")
region = Rect2(135, 0, 45, 61)

[sub_resource type="SpriteFrames" id="SpriteFrames_c4yge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xevcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wv1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1wjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpxqc")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qwh7f"]
radius = 13.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1k3l"]
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gb73p"]
bg_color = Color(1, 0.791675, 0.894215, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="SkullBlue" type="CharacterBody2D"]
platform_floor_layers = 0
script = ExtResource("1_rvtr0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c4yge")
autoplay = "default"
frame_progress = 0.593654

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -4)
shape = SubResource("CircleShape2D_qwh7f")

[node name="HPSkullBlue" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -40.0
offset_right = 13.0
offset_bottom = -36.0
theme_override_styles/background = SubResource("StyleBoxFlat_w1k3l")
theme_override_styles/fill = SubResource("StyleBoxFlat_gb73p")
max_value = 5.0
show_percentage = false

[node name="ShootingPointMob" type="Marker2D" parent="."]

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_18t7y")
volume_db = -10.0

[connection signal="finished" from="DeathSFX" to="." method="_on_death_sfx_finished"]
